2009-11-05  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (print-decoded-arglist): Fix printing of
	&any and &key parameters.
	(test-print-arglist): Slightly adapted.

	* slime-autodoc ([test] autodoc.1): Slightly adapted.

2009-11-02  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank-arglists.lisp (do-decoded-arglists): Remove L-V-T.

2009-11-02  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-parse.el (slime-make-form-spec-from-string): Break out of
	the loop if we're at unbalanced parentheses.
	(slime-compare-character-syntax): New helper.
	(slime-parse-form-upto-point): Use it.
	(slime-incomplete-form-at-point): Revert change.
	([test] form-upto-point.1): New test case.

2009-11-02  Stas Boukarev  <stassats@gmail.com>

	* slime-parse.el (slime-incomplete-form-at-point): Concatenate " )"
	not just ")", because the form's last char may be \, and the parenthesis
	will be escaped.
	That fixes a bug reported by Ariel Badichi.

2009-10-31  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-fontifying-fu.el (slime-search-suppressed-forms-internal):
	Wrap form in `ignore-errors' again. People have been guinea pigs
	long enough. Suppression of reader-conditionalized forms seems to
	work pretty reliably now.

2009-10-31  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-autodoc.el, swank-arglists.lisp: Large parts were
	rewritten. Autodoc is now able to highlight &key parameters, and
	parameters in nested arglists.

	* slime-parse.el, slime-c-p-c.el, slime-highlighting-edits.el:
	Adapted to changes.

2009-10-31  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-autodoc.el (slime-autodoc-worthwile-p): New helper.
	(slime-compute-autodoc-internal): Use it to only perform an RPC
	request if it's worthwhile to do so. For example, don't do it if
	the user only typed a single opening parenthesis.

	* swank-arglists.lisp (variable-desc-for-echo-area):
	Bind *PRINT-READABLY* to NIL as global variables may contain
	objects which can't be printed readably.
